# CompanyWebsiteTest4

./: LICENSE  main.py  pyproject.toml
templates/: browse-products.html  homepage.html  product-page.html  receipt.html
